Create WMS and WFS clients for querying service metadata